--- a/Modul Kuliah/Aljabar/sections/copyright.tex
+++ b/Modul Kuliah/Aljabar/sections/copyright.tex
@@ -38,8 +38,7 @@
 	
 	\vspace{0.5cm}
 	
-	Copyright \copyright \space \the\year \space pada Penulis \\
-	dan dilisensikan dibawah lisensi CC BY-NC-SA 4.0
+	Copyright \copyright \space \the\year \space pada Penulis
 	
 	\vspace{0.5cm}
 	
@@ -57,7 +56,7 @@
 	\vspace{0.5cm}
 	
 	\begin{center}
-		Anda bebas untuk menyalin, mendistribusikan, menampilkan, dan membuat karya turunan dari buku ini dengan ketentuan sebagai berikut: (1) Atribusi. Anda harus memberikan kredit terhadap penulis aslinya. (2) Nonkomersial. Anda tidak boleh menggunakan karya ini untuk tujuan komersial. (3) Bagikan Serupa. Jika Anda mengubah, mentransformasikan, atau membuat suatu karya di atas karya ini, Anda boleh mendistrubusikan karya tersebut hanya di bawah lisensi yang identik dengan lisensi ini. Ini adalah ringkasan lisensi lengkap dibaca dan tersedia secara daring di https://creativecommons.org/licenses/by-nc-sa/4.0/deed.id.
+		Buku ini dilisensikan di bawah lisensi CC BY-NC-ND 4.0. Artinya, Anda bebas untuk menyalin, mendistribusikan, dan menampilkan karya ini dengan ketentuan sebagai berikut: (1) Atribusi. Anda harus memberikan kredit terhadap penulis aslinya. (2) Nonkomersial. Anda tidak boleh menggunakan materi ini untuk tujuan komersial. (3) Tanpa Turunan. Jika Anda mengubah, mentransformasikan, atau membuat suatu materi turunan dari materi ini, Anda tidak boleh mendistrubusikan materi yang dimodifikasi tersebut. Ini adalah ringkasan lisensi lengkap yang tersedia secara daring di https://creativecommons.org/licenses/by-nc-nd/4.0/deed.id.
 	\end{center}
 	
 	\vspace{0.5cm}
